--- a/minis/content/mini202508201533.md
+++ b/minis/content/mini202508201533.md
@@ -1,11 +1,18 @@
 ---
-id: mek4tps50q5zj6gz33mo
-title: test
+id: mek4u4dnaw6vml8gx5w
+title: agas
 date: 2025-08-20
 time: 15:33
-tags: ["test"]
+tags: ["asdasd", "adada", "adad"]
 ---
 
-# test
+# agas
 
-test
+askejf vhwefwaeiubfwuiefbawif b awpif ubaba gubpa 
+a
+a
+
+
+a gaieubg a g
+
+asda
