--- a/minis/content/mini202508201534.md
+++ b/minis/content/mini202508201534.md
@@ -12,4 +12,6 @@ When the F1 haptic trailer first dropped, it was one of those moments where you 
 
 I don’t have an iPhone. So instead of just sitting on the sidelines, I took it as a little challenge. Why not try recreating it for Android? I had even found out how to trigger vibrations on Android that very day and bookmarked the site, but of course, it just stayed there. Procrastination kicked in hard, and what I thought I’d get done quickly ended up being pushed aside for weeks.
 
+![image](https://content.beyondmebtw.com/movietv/tv/tv7.webp)
+
 Finally, I sat down and gave it a go. The end result? It came out surprisingly well. Sure, it might be a bit rough around the edges, I’m not going to pretend it’s pixel-perfect or super polished, but it still feels powerful when you actually use it. There’s something satisfying about creating an experience that you thought was out of reach.
