--- a/minis/content/mini202508202002.md
+++ b/minis/content/mini202508202002.md
@@ -8,6 +8,8 @@ tags: ["blog", "first", "project"]
 
 # The First of Many
 
+---
+
 The wait is finally over!  
 
 After 2 weeks, and roughly 12 hours of development — it’s here. I present to you **Minis by _Beyond Me Btw_**.  
@@ -18,6 +20,6 @@ With Minis, I can give live commentary on projects without waiting until the ver
 
 And this is just the start. I’ve got more features planned — maybe even a Twitter bot for fun, and plenty more to come.  
 
-Stay Tuned, The best is yet to come!
+**Stay Tuned, The best is yet to come!**
 
 ![Minis by Beyond Me Btw](https://beyondmebtw.com/assets/images/projects/minisbybmb.webp)
