--- a/minis/content/mini202508202002.md
+++ b/minis/content/mini202508202002.md
@@ -22,4 +22,4 @@ And this is just the start. I’ve got more features planned — maybe even a Tw
 
 **Stay Tuned, The best is yet to come!**
 
-![Minis by Beyond Me Btw](https://beyondmebtw.com/assets/images/projects/minisbybmb.webp)
+![Minis by Beyond Me Btw](https://content.beyondmebtw.com/experience/exp30.webp)
