--- a/minis/content/mini202508212159.md
+++ b/minis/content/mini202508212159.md
@@ -8,13 +8,12 @@ tags: ["movie", "movie review"]
 
 # Triple Threat
 
----
-I ended up watching _Venom 3: The Last Dance_, _Kraven the Hunter_, and _Madame Web_ back to back. Venom was fine, but the other two, oh my god. I’d heard the talk about how bad they were when they first released, but seeing them myself was something else entirely. Some of them don’t even warrant full reviews, so here are three short ones instead.
+I ended up watching *Venom 3: The Last Dance*, *Kraven the Hunter*, and *Madame Web* back to back. Venom was fine, but the other two, oh my god. I’d heard the talk about how bad they were when they first released, but seeing them myself was something else entirely. Some of them don’t even warrant full reviews, so here are three short ones instead.
 
 ---
 
 **Venom: The Last Dance (2024)**  
-It’s dumb, but it’s sweet and somehow that’s exactly why it works. Probably the only Sony Spider-Man villain to actually make it through a full trilogy, Venom goes out on a surprisingly fun and heartfelt note. The plot is decent, a little messy in places, but never boring. The dancing scene with Mrs. Chen? Adorable. And Eddie saying goodbye to Venom with _Memories_ by Maroon 5 playing in the background unintentionally hilarious, but still kind of touching. The Venom trilogy might and will be Sony’s best work: fun, ridiculous, but never dull. **10/10**
+It’s dumb, but it’s sweet and somehow that’s exactly why it works. Probably the only Sony Spider-Man villain to actually make it through a full trilogy, Venom goes out on a surprisingly fun and heartfelt note. The plot is decent, a little messy in places, but never boring. The dancing scene with Mrs. Chen? Adorable. And Eddie saying goodbye to Venom with *Memories* by Maroon 5 playing in the background unintentionally hilarious, but still kind of touching. The Venom trilogy might and will be Sony’s best work: fun, ridiculous, but never dull. **10/10**
 
 ---
 
@@ -24,8 +23,8 @@ Not even “fun bad,” just bad. Kraven feels like a Russian Tarzan knockoff, a
 ---
 
 **Madame Web (2024)**  
-I made the mistake of watching this right after _Kraven the Hunter_ and honestly, it made _Kraven_ look like a masterpiece in comparison. This isn’t just boring, it’s boring _and_ dumb. The plot is a mess, the dialogue is weak and action was so bad that a kid smashing action figures together would’ve looked better. You can’t help but wonder if this thing was made as a tax write-off. Worst of all, the cast deserved better they were probably told this was going to be the next big Marvel event, only for it to be the next big joke. **1/10**
+I made the mistake of watching this right after *Kraven the Hunter* and honestly, it made *Kraven* look like a masterpiece in comparison. This isn’t just boring, it’s boring *and* dumb. The plot is a mess, the dialogue is weak and action was so bad that a kid smashing action figures together would’ve looked better. You can’t help but wonder if this thing was made as a tax write-off. Worst of all, the cast deserved better they were probably told this was going to be the next big Marvel event, only for it to be the next big joke. **1/10**
 
 ---
 
-Well, that was that. Six hours in total, and only two of them were actually fun. Skip _Kraven_ and _Madame Web_, just watch _Venom 3_
+Well, that was that. Six hours in total, and only two of them were actually fun. Skip *Kraven* and *Madame Web*, just watch *Venom 3*
